[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/spike_ball.png" type="Texture" id=1]
[ext_resource path="res://src/SpikeBall.gd" type="Script" id=2]
[ext_resource path="res://assets/images/chain.png" type="Texture" id=3]
[ext_resource path="res://assets/audio/impactMetal_heavy_000.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/melee sound.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 40.4696

[sub_resource type="CircleShape2D" id=2]
radius = 43.307

[node name="SpikeBall" type="KinematicBody2D" groups=[
"ball",
]]
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.187412, 0.187412 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="KillBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillBox"]
shape = SubResource( 2 )

[node name="Chain" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 24.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 3 )
texture_mode = 1

[node name="BounceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SwishSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
[connection signal="area_entered" from="KillBox" to="." method="_on_KillBox_area_entered"]
[connection signal="body_entered" from="KillBox" to="." method="_on_KillBox_body_entered"]
